--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <h3>Tuburon blanco el rey del mar</h3>
-    <p>El tiburón blanco es una especie pelágica y cosmopolita que habita en los diversos océanos y mares templados del planeta como el Atlántico, el Índico y el Pacífico; también se distribuye en el Mar Mediterráneo. Puede realizar migraciones de larga distancia a través de las regiones oceánicas.
+    <img src="recursos/holatiburon.gif" alt="Hola" width="550" height="400">
+    <p>Hola y Bienvenido a nuestra pagina sobre los tiburones, hoy hablaremos sobre los tiburones blancos los reyes del oceano<BR><BR>El tiburón blanco es una especie pelágica y cosmopolita que habita en los diversos océanos y mares templados del planeta como el Atlántico, el Índico y el Pacífico; también se distribuye en el Mar Mediterráneo. Puede realizar migraciones de larga distancia a través de las regiones oceánicas.
         Lo podemos localizar en la zona de la plataforma continental y la zona costera pero también en zonas de mar abierto.<br><br>
     
         El tiburón blanco es un tiburón grande, normalmente mide entre 500 y 580 cm, siendo las hembras mayores que los machos. Tiene forma fusiforme, con ojos negros, hocico cónico y achatado. Sus dientes son grandes, triangulares y serrados.
@@ -24,5 +25,7 @@
         <img src="recursos\tiburon-blanco-white-shark-5.jpg" alt="Imagen centrada" width="550" height="400">
         <img src="recursos\tiburon-blanco-white-shark-2.jpg" alt="Imagen centrada" width="550" height="400">
         <img src="recursos\tiburon-blanco-white-shark-7.jpg" alt="Imagen centrada" width="550" height="400">
+
+        <P></P>
 </body>
 </html>
