--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <img src="recursos\tiburon-blanco-white-shark-5.jpg" alt="Imagen centrada" width="550" height="400">
         <img src="recursos\tiburon-blanco-white-shark-2.jpg" alt="Imagen centrada" width="550" height="400">
         <img src="recursos\tiburon-blanco-white-shark-7.jpg" alt="Imagen centrada" width="550" height="400">
-
-        <P></P>
+        <br><br>
+        <P>A continuación les presentamos un video sobre los tiburones su habitad y porque son seres de respeto, no de tener miedo poruqe no son seres malvados solamente son seres que estan por arriba de la piramide alimenticia.</P>
+        <video width="300" height="500">
+            <source src="recursos/TODO SOBRE el GRAN TIBURÓN BLANCO.mp4" type="video/mp4">
+        </video>
 </body>
 </html>
