--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="icon" href="recursos\ocean-logo-design-abstract-waves-seagulls-89336091.webp" type="image/x-icon">
     <link rel="shortcut icon" href="recursos\ocean-logo-design-abstract-waves-seagulls-89336091.webp" type="image/x-icon">
 
+    <link rel="stylesheet" href="Estilos.css">
+
     <title>Waterworld</title>
     <H1>Mundo de los Tiburones</H1>
 </head>
 <body>
     <h3>Tuburon blanco el rey del mar</h3>
-    <img src="recursos/holatiburon.gif" alt="Hola" width="550" height="400">
+    <img src="recursos/holatiburon.gif" alt="Hola" width="350" height="300">
     <p>Hola y Bienvenido a nuestra pagina sobre los tiburones, hoy hablaremos sobre los tiburones blancos los reyes del oceano<BR><BR>El tiburón blanco es una especie pelágica y cosmopolita que habita en los diversos océanos y mares templados del planeta como el Atlántico, el Índico y el Pacífico; también se distribuye en el Mar Mediterráneo. Puede realizar migraciones de larga distancia a través de las regiones oceánicas.
         Lo podemos localizar en la zona de la plataforma continental y la zona costera pero también en zonas de mar abierto.<br><br>
     
@@ -20,14 +22,16 @@
         <br><br>
         El tiburón blanco es una especie muy activa y rápida. Solitaria aunque también puede encontrarse formando grupos de 10 o más ejemplares en zonas de alimentación. Se ha considerado el tiburón más peligroso del mundo.
     </p>
-    <h5>Imagenes de Referencia</h6>
-        <img src="recursos\tiburon-blanco-white-shark-1.jpg" alt="Imagen centrada" width="550" height="400">
-        <img src="recursos\tiburon-blanco-white-shark-5.jpg" alt="Imagen centrada" width="550" height="400">
-        <img src="recursos\tiburon-blanco-white-shark-2.jpg" alt="Imagen centrada" width="550" height="400">
-        <img src="recursos\tiburon-blanco-white-shark-7.jpg" alt="Imagen centrada" width="550" height="400">
+    <div class="img">
+    <h3>Imagenes de Referencia</h3>
+        <img src="recursos\tiburon-blanco-white-shark-1.jpg" alt="Imagen centrada" width="350" height="200">
+        <img src="recursos\tiburon-blanco-white-shark-5.jpg" alt="Imagen centrada" width="350" height="200">
+        <img src="recursos\tiburon-blanco-white-shark-2.jpg" alt="Imagen centrada" width="350" height="200">
+        <img src="recursos\tiburon-blanco-white-shark-7.jpg" alt="Imagen centrada" width="350" height="200">
+    </div>
         <br><br>
         <P>A continuación les presentamos un video sobre los tiburones su habitad y porque son seres de respeto, no de tener miedo poruqe no son seres malvados solamente son seres que estan por arriba de la piramide alimenticia.</P>
-        <video width="300" height="500">
+        <video controls width="1000" height="600">
             <source src="recursos/TODO SOBRE el GRAN TIBURÓN BLANCO.mp4" type="video/mp4">
         </video>
 </body>
